--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,22 +3,22 @@
 @tailwind utilities;
 
 body {
-  @apply bg-indigo-50;
+  background-color: #ede9fe;
+  background-image: linear-gradient(90deg,#fff1f2 5%, rgba(0, 0, 0, 0) 5%), linear-gradient(#fff1f2 5%, rgba(0, 0, 0, 0) 5%);
+  background-size: 20px 20px;
+}
+
+.app-card {
+  box-shadow: 4px 4px 0 0 rgba(0, 0, 0, 1);
+  @apply border-2 border-black rounded-md;
+}
+
+.app-card-ns {
+  @apply border-2 border-black rounded-md;
 }
 
 /* 滚动槽 */
 ::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-::-webkit-scrollbar-track {
-  border-radius: 3px;
-  background: rgba(0,0,0,0.06);
-  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
-}
-/* 滚动条滑块 */
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: rgba(0,0,0,0.12);
-  -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+  width: 0;
+  height: 0;
 }
