--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -8,6 +8,7 @@ body {
   background-size: 20px 20px;
   font-size: larger;
   /* font-family: 'pixfonts'; */
+  user-select: none;
   color: #000;
 }
 
